[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-hunter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
apartment-hunter = "apartment_hunter.main:cli"
